feat: add files to shelter-adaptive version

--- a/shelter/main.html
+++ b/shelter/main.html
@@ -20,6 +20,9 @@
           <p class="header__subtitle">Shelter for pets in Boston</p>
         </a>
         <nav class="header__nav nav">
+          <button class="nav__burger">
+            <span class="nav__burger-label"></span>
+          </button>
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#about" class="nav__link nav__link-active">About the shelter</a>
